--- a/AndroidBoundExample/src/main/res/layout/activity_bindable_main.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_bindable_main.xml
@@ -18,7 +18,7 @@
             android:layout_centerHorizontal="true"
             android:textSize="20sp"
             tools:text="title"
-            binding="{ Text @= MainActivityTitle }; { TextColor @= MainActivityTitleColor }; { Typeface @- ToFont(this, &apos;bold&apos;) }"/>
+            binding="{ Text @= MainActivityTitle }; { TextColor @= MainActivityTitleColor }"/>
 
     <Button
             android:id="@+id/open_normal_activity_button"
