added "useParentLayoutParams" flag to BindableRV

--- a/AndroidBoundExample/src/main/res/layout/activity_recyclerview.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_recyclerview.xml
@@ -41,6 +41,7 @@
                 layoutManager="linear"
                 layoutManagerOrientation="vertical"
                 layoutManagerReverse="false"
+                useParentLayoutParams="false"
                 binding="{ItemsSource @= ExampleListLinear}; {OnItemClickListener @- OnItemClickListener}"/>
 
         <TextView
