--- a/AndroidBoundExample/src/main/res/layout/activity_nested_recyclerview.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_nested_recyclerview.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_margin="5dp"
-        android:layout_height="wrap_content">
+             android:layout_width="match_parent"
+             android:layout_margin="5dp"
+             android:layout_height="wrap_content">
 
     <solutions.alterego.androidbound.android.ui.BindableRecyclerView
             android:id="@+id/main_nested_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            useParentLayoutParams="false"
             itemTemplate="@layout/activity_paginated_rv_item"
-            binding="{ItemsSource @= DataItems};  " />
+            binding="{ItemsSource @= DataItems};  "/>
 </FrameLayout>
