--- a/AndroidBoundExample/src/main/res/layout/nested_recycler_view.xml
+++ b/AndroidBoundExample/src/main/res/layout/nested_recycler_view.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+             android:orientation="vertical"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content">
 
 
     <solutions.alterego.androidbound.android.ui.BindableRecyclerView
-            binding="
-            { ItemsSource @= NestedDataSet };  "
+            binding="{ ItemsSource @= NestedDataSet }"
             layoutManager="linear"
             layoutManagerOrientation="horizontal"
-            android:layout_width="wrap_content"
+            useParentLayoutParams="false"
             itemTemplate="@layout/nested_rv_item"
-            android:layout_height="wrap_content" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
 </FrameLayout>
