added BindableRV get/setRtlLayout()

--- a/AndroidBoundExample/src/main/res/layout/nested_recycler_view.xml
+++ b/AndroidBoundExample/src/main/res/layout/nested_recycler_view.xml
@@ -6,7 +6,7 @@
 
 
     <solutions.alterego.androidbound.android.ui.BindableRecyclerView
-            binding="{ ItemsSource @= NestedDataSet }"
+            binding="{ RtlLayout @= IsRtl }; { ItemsSource @= NestedDataSet }"
             layoutManager="linear"
             layoutManagerOrientation="horizontal"
             useParentLayoutParams="false"
