moved BindableRV from core AB to support AB module

--- a/AndroidBoundExample-support/src/main/res/layout/activity_nested_recyclerview.xml
+++ b/AndroidBoundExample-support/src/main/res/layout/activity_nested_recyclerview.xml
@@ -4,7 +4,7 @@
              android:layout_margin="5dp"
              android:layout_height="wrap_content">
 
-    <solutions.alterego.androidbound.android.ui.BindableRecyclerView
+    <solutions.alterego.androidbound.support.android.ui.BindableRecyclerView
             android:id="@+id/main_nested_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
