--- a/AndroidBoundExample-support/src/main/res/layout/nested_recycler_view.xml
+++ b/AndroidBoundExample-support/src/main/res/layout/nested_recycler_view.xml
@@ -5,7 +5,7 @@
              android:layout_height="wrap_content">
 
 
-    <solutions.alterego.androidbound.android.ui.BindableRecyclerView
+    <solutions.alterego.androidbound.support.android.ui.BindableRecyclerView
             binding="{ RtlLayout @= IsRtl }; { ItemsSource @= NestedDataSet }"
             layoutManager="linear"
             layoutManagerOrientation="horizontal"
