--- a/AndroidBoundExample-support/src/main/res/layout/activity_paginated_recyclerview.xml
+++ b/AndroidBoundExample-support/src/main/res/layout/activity_paginated_recyclerview.xml
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/open_main_activity_button"
                 itemTemplate="@layout/activity_paginated_rv_item"
-                binding="{Items @+@ DataItems2};
+                binding="{ItemsSource @+ DataItems2};
             { RemoveItems !@ RemoveItems};
             { PageDescriptor @= LoadNextPage2 }; { NextPage =@ LoadNextPage2 }; " />
 
