--- a/AndroidBoundExample-support/src/main/res/layout/nested_rv_item.xml
+++ b/AndroidBoundExample-support/src/main/res/layout/nested_rv_item.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/image"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                binding="{Source @= ImageUrl}"
+                binding="{Source @- ImageUrl}"
                 android:layout_margin="4dp"
                 android:gravity="left" />
 
@@ -27,7 +27,7 @@
                 android:id="@+id/text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                binding="{Text @= Name}"
+                binding="{Text @- Name}"
                 android:gravity="left"
                 android:layout_marginBottom="4dp"
                 android:layout_marginLeft="10dp"
