--- a/AndroidBoundExample/src/main/res/layout/activity_bindable_main.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_bindable_main.xml
@@ -102,7 +102,7 @@
              { Typeface @- ToFont(this, &apos;italic&apos;) }"/>
 
         <Button
-                binding="{ Click @= ClearEditTextText }"
+                binding="{ Click @- ClearEditTextText }"
                 android:text="clear"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
