--- a/AndroidBoundExample-support/src/main/res/layout/activity_nested_recyclerview.xml
+++ b/AndroidBoundExample-support/src/main/res/layout/activity_nested_recyclerview.xml
@@ -9,6 +9,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             useParentLayoutParams="false"
-            itemTemplate="@layout/activity_paginated_rv_item"
-            binding="{ItemsSource @= DataItems};  "/>
+            binding="{ItemsSource @= DataItems}; {TemplatesForObjects @- ObjectTemplates}"/>
 </FrameLayout>
