removed grid layout from nested RV example

--- a/AndroidBoundExample-support/src/main/res/layout/activity_nested_recyclerview.xml
+++ b/AndroidBoundExample-support/src/main/res/layout/activity_nested_recyclerview.xml
@@ -9,5 +9,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             useParentLayoutParams="false"
+            layoutManager="linear"
+            layoutManagerOrientation="vertical"
             binding="{ItemsSource @= DataItems}; {TemplatesForObjects @- ObjectTemplates}"/>
 </FrameLayout>
